package com.daugherty.wrex.recommendation

enum RECOMMENDATION_FEEDBACK {
  LIKED,
  DISLIKED
}