package com.daugherty.wrex.recommendation

enum RECOMMENDATION_TYPE {
  HANGOUT,
  LEARN,
  EVENT,
  MENTORSHIP,
  OPPORTUNITY
}