package com.daugherty.wrex.user

class UserTag {
  String tagId
  Long count
}
