@startuml

class User {
  id: string
  firstName: string
  lastName: string
  email: string
  hireDate: Date
  lineOfServiceId: string
  branchId: string
  registrationDate: Date
}

class Branch {
  id: string
  name: string
  abbrev: string
}

class LineOfService {
  id: string
  name: string
  abbrev: string
}

class Tag {
  id: string
  categories: TagCategoryConfidence[]
  name: string
}

class TagCategoryConfidence {
  id: string
  confidence: number
}

class TagCategory {
  id: string
  name: string
}

class UserTag {
  userId: string
  tagId: string
  date: Date
  count: number
}

class Recommendation {
  id: string
  date: Date
  userId: string
  type: RECOMMENDATION_TYPE
  message: string
  dismissed: boolean
  feedback: RECOMMENDATION_FEEDBACK
}

class Status {
   message: string
}

enum RECOMMENDATION_FEEDBACK {
  LIKED,
  DISLIKED
}

enum RECOMMENDATION_TYPE {
  HANGOUT,
  LEARN,
  EVENT,
  MENTORSHIP,
  OPPORTUNITY
}

LineOfService "1" *-- "many" User
Branch "1" *-- "many" LineOfService
User "many" -- "many" Tag
User "1" *-- "many" Recommendation
TagCategory "1" *-- "many" Tag
UserTag "1" *-- "many" Tag
UserTag "1" *-- "many" User
User "1" *-- "many" Status

@enduml